# Rivu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
data/: digits.arff  giveMeLoanKaggle.arff
diagrams/: class-diagram.mmd  classifiers.mmd  core.mmd  evaluation.mmd  merge-mmd.sh  prequential.mmd  seq-hoeffding.mmd  seq-prequential.mmd  streams.mmd
src/: attribute.rs  instance.rs  instance_header.rs  lib.rs  main.rs  stream.rs
src/classifiers/: classifier.rs  mod.rs
src/classifiers/attribute_class_observers/: attribute_class_observer.rs  gaussian_numeric_attribute_class_observer.rs  mod.rs  nominal_attribute_class_observer.rs  null_attribute_class_observer.rs
src/classifiers/bayes/: mod.rs  naive_bayes.rs
src/classifiers/conditional_tests/: attribute_split_suggestion.rs  mod.rs
src/classifiers/hoeffding_tree/: hoeffding_tree.rs  leaf_prediction_option.rs  mod.rs
src/core/: instance_header.rs  mod.rs
src/core/attributes/: attribute.rs  mod.rs  nominal_attribute.rs  numeric_attribute.rs
src/core/estimators/: gaussian_estimator.rs  mod.rs
src/core/instances/: dense_instance.rs  instance.rs  mod.rs
src/data/: digits.arff
src/evaluation/: measurement.rs  mod.rs
src/evaluation/estimators/: basic_estimator.rs  estimator.rs  mod.rs
src/evaluation/evaluators/: basic_classification_evaluator.rs  mod.rs  performance_evaluator.rs
src/evaluation/preview/: mod.rs  (+2 more)
src/streams/: mod.rs  stream.rs
src/tasks/: mod.rs  prequential_evaluator.rs
src/testing/: mod.rs
src/utils/: file_parsing.rs  math.rs  mod.rs  system.rs
(+60 files in other folders)
