[package]
name = "naive-bayes-hoeffding-trees-rust-implementation"
version = "0.1.0"
edition = "2024"

[features]
test-support = []

[dependencies]
tempfile = "3.20.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
schemars = "1.0.4"
strum = "0.27.2"
strum_macros = "0.27.2"
inquire = "0.9.1"
anyhow = "1.0.100"
thiserror = "2.0.16"
comfy-table = "7.2.1"
chrono = "0.4.42"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.175"
mach2 = "0.5.0"